--- a/src/pages/DataDisplay/styles/style.css
+++ b/src/pages/DataDisplay/styles/style.css
@@ -25,13 +25,17 @@
 }
 
 .api-data-list {
+
+  font-weight: 800;
   list-style: none;
   padding: 0;
   margin: 0 2rem;
+  margin-top: 3rem;
   width: 25rem;
 }
 
 .api-data-list li {
+  border-radius: 17px;
   padding: .5rem;
   margin-bottom: .5rem;
 }
